Fixed footer overflow

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,6 +2,7 @@
   justify-content: space-around;
   height: 400px;
   background: black;
+  overflow: hidden;
 }
 
 .team-logo {
